<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/source_migrate"
        android:title="@string/migrate_source" />

    <item
        android:id="@+id/option_chapter_jump"
        android:title="@string/jump_to_chapter" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/download"
        android:icon="@drawable/download"
        android:title="@string/download"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/download_next"
                android:title="@string/download_next_chapter" />
            <item
                android:id="@+id/download_next_5"
                android:title="@string/download_next_5_chapters" />
            <item
                android:id="@+id/download_next_10"
                android:title="@string/download_next_10_chapters" />
            <item
                android:id="@+id/download_custom"
                android:title="@string/custom" />
            <item
                android:id="@+id/download_unread"
                android:title="@string/unread" />
            <item
                android:id="@+id/download_all"
                android:title="@string/all" />
        </menu>
    </item>

    <item
        android:id="@+id/set_categories"
        android:title="@string/set_categories"
        app:showAsAction="never"/>
</menu>