<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/remove_from_library"
        android:icon="@drawable/trash"
        android:title="@string/remove" />

    <item
        android:id="@+id/source_migrate"
        android:title="@string/migrate_sources"
        app:showAsAction="never" />

    <item
        android:id="@+id/set_categories"
        android:title="@string/set_categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/library_deselect_all"
        android:title="@string/deselect_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/library_inverse_selection"
        android:icon="@drawable/flip_to_back"
        android:title="@string/inverse_selection"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/library_select_all"
        android:icon="@drawable/select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/library_select_between"
        android:icon="@drawable/unfold_less"
        android:title="@string/select_between"
        app:showAsAction="ifRoom" />

</menu>