<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/library_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/view_type"
        android:icon="@drawable/view_module"
        android:title="@string/novel_card_type_selector_title"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/view_type_normal"
                android:title="@string/normal" />
            <item
                android:id="@+id/view_type_comp"
                android:title="@string/compressed" />
        </menu>
    </item>
    <item
        android:id="@+id/updater_now"
        android:icon="@drawable/refresh"
        android:title="@string/update_now"
        app:showAsAction="ifRoom" />
</menu>