<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/libraryController"
            android:icon="@drawable/library"
            android:title="@string/my_library" />
        <item
            android:id="@+id/updatesController"
            android:icon="@drawable/app_update"
            android:title="@string/library_updates" />

        <item
            android:id="@+id/browseController"
            android:icon="@drawable/navigation_arrow"
            android:title="@string/browse" />

        <item
            android:id="@+id/moreController"
            android:icon="@drawable/ic_baseline_more_horiz_24"
            android:title="@string/more" />
    </group>

</menu>