<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/all_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <RadioButton
            android:id="@+id/read_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read" />


        <RadioButton
            android:id="@+id/unread_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unread" />

    </RadioGroup>


    <CheckBox
        android:id="@+id/downloaded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/downloaded" />

    <CheckBox
        android:id="@+id/bookmarked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmarked" />
</LinearLayout>