<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/extension_image_desc"
            app:srcCompat="@drawable/broken_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@id/uninstallButton"
            android:layout_toEndOf="@id/imageView"
            android:contentDescription="@string/extension_name_desc"
            android:textAlignment="textStart"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="FAKE EXTENSION" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/identification"
            android:contentDescription="@string/extension_filename_desc"
            android:textAlignment="textEnd"
            android:textIsSelectable="true"
            tools:text="fakeFileName.lua" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imageView"
            android:contentDescription="@string/extension_id_desc"
            android:textIsSelectable="true"
            tools:text="10" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/identification"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imageView"
            android:contentDescription="@string/extension_language_desc"
            android:textAlignment="textEnd"
            android:textIsSelectable="true"
            tools:text="RUSSIAN MAYBE" />

        <ImageButton
            android:id="@+id/uninstallButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/trash" />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details"
        tools:layout_editor_absoluteY="100dp" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/settings_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details"
        tools:visibility="visible" />


    <app.shosetsu.android.view.widget.EmptyDataView
        android:id="@+id/emptyDataView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/extension_settings_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_progress_bar"
        tools:listitem="@layout/settings_item" />


</androidx.constraintlayout.widget.ConstraintLayout>