<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/idLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_label" />

            <TextView
                android:id="@+id/repoID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negative_one" />

        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/removeButton"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="This is a repository" />

        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/removeButton"
            android:layout_toEndOf="@id/idLayout"
            tools:text="aaaaaaaaaaaaaaaaa" />

        <ImageButton
            android:id="@+id/removeButton"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@drawable/close" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>